--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- LINK CSS -->
     <link rel="stylesheet" href="./assets/css/style.css">
     <!-- TITLE -->
     <title>Griglia Campo Minato</title>
 </head>
+
 <body>
     <div class="container mb-3">
         <header class="mt-3">
@@ -22,15 +23,16 @@
                             <option value="medium">Medium</option>
                             <option value="hard">Hard</option>
                         </select>
-                            <button class="btn btn-outline-dark text-nowrap" type="button" id="btn_start_game">Avvia gioco</button>
+                        <button class="btn btn-outline-dark text-nowrap" type="button" id="btn-start-game">Avvia gioco</button>
                     </form>
                 </div>
             </div>
         </header>
-        
+
         <section class="d-flex justify-content-center pb-5 pt-5">
             <div id="boxgame" class="box"></div>
         </section>
-    <script src="./assets/js/main.js"></script>
+        <script src="./assets/js/main.js"></script>
 </body>
+
 </html>
